--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node api/index.js",
+     "build": "npm install && npm install --prefix employees && npm run build --prefix employees"
   },
   "keywords": [],
   "author": "",
