--- a/employees/package.json
+++ b/employees/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
